<resources>
    <string name="app_name">MCS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登陆/注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- String related to main -->
    <string name="btquery">查询</string>
    <string name="upload">上传</string>
    <string name="btlogin">登陆</string>
    <string name="bttakephoto">拍照</string>
    <string name="tvhint">wei@client</string>
</resources>
